<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.ActInsertar">

    <EditText
        android:id="@+id/tbCadenaEspanyol"
        android:layout_width="343dp"
        android:layout_height="55dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:hint="@string/tbCadenaEspanyol"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInsertarCadena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="150dp"
        android:text="@string/btnInsertarCadena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbtnGrupo" />

    <RadioGroup
        android:id="@+id/rbtnGrupo"
        android:layout_width="171dp"
        android:layout_height="95dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="122dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbCadenaIngles">

        <RadioButton
            android:id="@+id/rbtnPalabra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rbtnPalabra" />

        <RadioButton
            android:id="@+id/rbtnExpresion"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/rbtnExpresion" />
    </RadioGroup>

    <EditText
        android:id="@+id/tbCadenaIngles"
        android:layout_width="343dp"
        android:layout_height="55dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:hint="@string/tbCadenaIngles"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbCadenaEspanyol" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCadenas"
        android:layout_width="340dp"
        android:layout_height="306dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInsertarCadena" />

</androidx.constraintlayout.widget.ConstraintLayout>